Se modifican archivos para que se puedan consultar lo equipos de cualquier Id de Liga, además se organiza la vista de los equipos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="youtube">Youtube</string>
     <string name="twitter">Twitter</string>
     <string name="website">Website</string>
+    <string name="badge_description">It is the team badge</string>
+    <string name="jersey_description">It is the team jersey</string>
 </resources>
